syntax = "proto3";

package cart;

option go_package = ".";

message CartItem {
  string id = 1;
  int32 quantity = 2;
  int64 added_at = 3;
}

message GetCartRequest {
  string cart_id = 1;
}

message GetCartResponse {
  repeated CartItem items = 1;
}

message ClearCartRequest{
  string cart_id = 1;
}

message ClearCartResponse{
  string cart_id = 1;
}

message IncreaseItemQuantityRequest {
  string cart_id = 1;
  string item_id = 2;
}

message IncreaseItemQuantityResponse {
  CartItem item = 1;
}

message DecreaseItemQuantityRequest{
  string cart_id = 1;
  string item_id = 2;
}

message DecreaseItemQuantityResponse{
  optional CartItem item = 1;
}

service CartService{
  rpc getCart(GetCartRequest) returns (GetCartResponse);
  rpc clearCart(ClearCartRequest) returns (ClearCartResponse);
  rpc increaseItemQuantity(IncreaseItemQuantityRequest) returns (IncreaseItemQuantityResponse);
  rpc decreaseItemQuantity(DecreaseItemQuantityRequest) returns (DecreaseItemQuantityResponse);
}