syntax = "proto3";

package catalog;

option go_package = ".";

enum SortType {
  CHEAPEST_FIRST = 0;
  EXPENSIVE_FIRST = 1;
  DISCOUNTED_FIRST = 2;
  NEWEST_FIRST = 3;
  ALPHABETICALLY = 4;
}

message CatalogItem {
  string id = 1;
  string sku = 2;
  string name = 3;
  string description = 4;
  bytes image_bytes = 5;
  float price = 6;
  float discount = 7;
  float weight = 8;
  int32 quantity = 9;
  repeated string tags = 10;
  int64 created_at = 11;
  int64 updated_at = 12;
}

message AddCatalogItemRequest {
  CatalogItem item = 1;
}

message AddCatalogItemResponse {
  string id = 1;
}

message GetCatalogItemByIdRequest {
  string id = 1;
}

message GetCatalogItemByIdResponse {
  CatalogItem item = 1;
}

message GetCatalogItemsByTagsRequest {
  repeated string tags = 1;
  SortType sort_type = 2;
  int64 skip = 3;
  int64 limit = 4;
}

message GetCatalogItemsByTagsResponse {
  repeated CatalogItem items = 1;
}

message UpdateCatalogItemRequest {
  CatalogItem item = 1;
}

message UpdateCatalogItemResponse {
  CatalogItem item = 1;
}

message RemoveCatalogItemRequest {
  string id = 1;
}

message RemoveCatalogItemResponse {
  string id = 1;
}

service CatalogService {
  rpc addCatalogItem(AddCatalogItemRequest) returns (AddCatalogItemResponse);
  rpc getCatalogItemById(GetCatalogItemByIdRequest) returns (GetCatalogItemByIdResponse);
  rpc getCatalogItemsByTags(GetCatalogItemsByTagsRequest) returns (GetCatalogItemsByTagsResponse);
  rpc updateCatalogItem(UpdateCatalogItemRequest) returns (UpdateCatalogItemResponse);
  rpc removeCatalogItem(RemoveCatalogItemRequest) returns (RemoveCatalogItemResponse);
}